--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server.js",
@@ -14,6 +15,7 @@
   "dependencies": {
     "@adminjs/express": "^6.1.1",
     "@adminjs/mongoose": "^4.1.0",
+    "@adminjs/themes": "^1.0.1",
     "@adminjs/upload": "^4.0.2",
     "@huggingface/inference": "^4.0.6",
     "adminjs": "^7.8.16",
