--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "mongoose": "^8.16.0",
     "multer": "^2.0.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
