--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
+    "express-formidable": "^1.2.0",
     "groq-sdk": "^0.27.0",
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.6.0",
